一旦GalleryMultiPickerをビルド対象から外してJitPackから参照する
時短のためと、androidx移行作業の対象が増えて面倒

--- a/settings.gradle
+++ b/settings.gradle
@@ -2,7 +2,7 @@ include ':Yukari'
 if (getProperty("yukari.exvoice.build").toBoolean()) {
     include ':yukari-exvoice'
 }
-include ':GalleryMultiPicker:library'
+//include ':GalleryMultiPicker:library'
 include ':yukari-processor-runtime'
 include ':yukari-processor'
 include ':gl-helpers'
