--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -58,7 +58,7 @@ ext {
     supportLibVersion = '28.0.0'
     playServicesVersion = '11.4.0'
     twitter4jVersion = '4.0.7'
-    mastodon4jVersion = '1.6.0'
+    mastodon4jVersion = '43b77f366515641a4569c2cfffef57301259c5a0'
     leakCanaryVersion = '1.5.4'
     exvoiceVersion = '20220503.124509'
 
@@ -181,7 +181,6 @@ dependencies {
     implementation "com.android.support:design:$supportLibVersion"
     implementation "com.android.support:exifinterface:$supportLibVersion"
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
-//    compile "com.android.support:multidex:1.0.2"
 
     // Play Services
     implementation "com.google.android.gms:play-services-base:${playServicesVersion}"
@@ -197,13 +196,9 @@ dependencies {
     implementation "org.twitter4j:twitter4j-core:${twitter4jVersion}"
     implementation "org.twitter4j:twitter4j-stream:${twitter4jVersion}"
     implementation "org.twitter4j:twitter4j-http2-support:${twitter4jVersion}"
-//    implementation "com.github.takke.twitter4j:twitter4j-core:2612db7f15"
-//    implementation "com.github.takke.twitter4j:twitter4j-stream:2612db7f15"
-//    implementation "com.github.takke.twitter4j:twitter4j-http2-support:2612db7f15"
 
     // Mastodon
-//    implementation "com.github.sys1yagi.mastodon4j:mastodon4j:${mastodon4jVersion}"
-    implementation "com.github.shibafu528.mastodon4j:mastodon4j:43b77f366515641a4569c2cfffef57301259c5a0"
+    implementation "com.github.shibafu528.mastodon4j:mastodon4j:${mastodon4jVersion}"
 
     // パーサ
     implementation 'com.google.code.gson:gson:2.8.1'
