--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -243,7 +243,7 @@ dependencies {
     implementation 'org.eclipse.collections:eclipse-collections-api:7.1.0'
     implementation 'org.eclipse.collections:eclipse-collections:7.1.0'
     implementation 'com.jakewharton.threetenabp:threetenabp:1.2.0'
-    implementation 'com.takisoft.fix:preference-v7:28.0.0.0'
+    implementation 'com.takisoft.preferencex:preferencex:1.0.0'
     implementation fileTree(dir: './libs', includes: ['*.jar'])
 
     // Kotlin
