--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -55,7 +55,7 @@ class GitUtil {
 }
 
 ext {
-    playServicesVersion = '11.4.0'
+    playServicesVersion = '17.6.0'
     twitter4jVersion = '4.0.7'
     mastodon4jVersion = '43b77f366515641a4569c2cfffef57301259c5a0'
     leakCanaryVersion = '1.5.4'
@@ -180,13 +180,12 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.preference:preference:1.0.0'
     implementation 'androidx.palette:palette:1.0.0'
-    implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.exifinterface:exifinterface:1.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 
     // Play Services
-    implementation "com.google.android.gms:play-services-base:${playServicesVersion}"
+    implementation "com.google.android.gms:play-services-basement:${playServicesVersion}"
 
     // UI追加
     implementation 'com.larswerkman:HoloColorPicker:1.4'
