--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -191,7 +191,7 @@ dependencies {
     implementation 'com.larswerkman:HoloColorPicker:1.4'
     implementation 'com.code-troopers.betterpickers:library:3.1.0'
 //    implementation project(':GalleryMultiPicker:library')
-    implementation 'com.github.shibafu528:GalleryMultiPicker:a78120ceb0'
+    implementation 'com.github.shibafu528:GalleryMultiPicker:3.0.0'
     implementation 'com.davemorrissey.labs:subsampling-scale-image-view:3.10.0'
 
     // Twitter4J
