--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -175,7 +175,7 @@ dependencies {
     coreLibraryDesugaring 'com.android.tools:desugar_jdk_libs:1.1.5'
 
     // Support Library
-    implementation 'androidx.appcompat:appcompat:1.0.0'
+    implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.recyclerview:recyclerview:1.0.0'
     implementation 'androidx.preference:preference:1.0.0'
@@ -242,6 +242,7 @@ dependencies {
     // いろいろ
     implementation project(':gl-helpers')
     implementation 'com.google.guava:guava:22.0-android'
+    implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava' // TODO: com.google.guava:guava:27.0-android 以上に更新したら削除する
     implementation 'org.eclipse.collections:eclipse-collections-api:7.1.0'
     implementation 'org.eclipse.collections:eclipse-collections:7.1.0'
     implementation 'com.takisoft.preferencex:preferencex:1.0.0'
