--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -223,10 +223,8 @@ dependencies {
     // Annotation Processor
     implementation 'com.jakewharton:butterknife:10.0.0'
     kapt 'com.jakewharton:butterknife-compiler:10.0.0'
-    implementation "com.github.hotchemi:permissionsdispatcher:3.3.1", {
-        exclude group: 'com.android.support', module: 'support-v13'
-    }
-    kapt "com.github.hotchemi:permissionsdispatcher-processor:3.3.1"
+    implementation 'com.github.permissions-dispatcher:permissionsdispatcher:4.9.2'
+    kapt 'com.github.permissions-dispatcher:permissionsdispatcher-processor:4.9.2'
     implementation project(':yukari-processor-runtime')
     kapt project(':yukari-processor')
 
