--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -168,6 +168,9 @@ android {
     kotlinOptions {
         apiVersion = '1.3'
     }
+    buildFeatures {
+        viewBinding true
+    }
 }
 
 dependencies {
