--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -313,7 +313,8 @@
 
         <activity
             android:name=".activity.MastodonReportActivity"
-            android:label="@string/title_activity_mastodon_report" />
+            android:label="@string/title_activity_mastodon_report"
+            android:windowSoftInputMode="adjustResize" />
    </application>
 
 </manifest>
