メンテナンス画面からTwitter APIレートリミットステータス画面を分離
refs #129

--- a/Yukari/src/main/AndroidManifest.xml
+++ b/Yukari/src/main/AndroidManifest.xml
@@ -319,6 +319,10 @@
         <activity
             android:name=".activity.NotificationPreferenceActivity"
             android:label="通知設定" />
+
+        <activity
+            android:name=".activity.TwitterRateLimitStatusActivity"
+            android:label="Twitter API レートリミットステータス" />
    </application>
 
 </manifest>
