--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -209,6 +209,7 @@ dependencies {
 
     // Mastodon
     implementation "com.github.shibafu528.mastodon4j:mastodon4j:${mastodon4jVersion}"
+    implementation project(':api:mastodon-ws')
 
     // パーサ
     implementation 'com.google.code.gson:gson:2.9.0'
