--- a/api/mastodon-ws/build.gradle
+++ b/api/mastodon-ws/build.gradle
@@ -16,7 +16,7 @@ repositories {
 }
 
 dependencies {
-    implementation 'com.squareup.okhttp3:okhttp:3.11.0' // TODO: 3.14.9でもいいかも。3.11.0はtwitter4jの依存バージョン。
+    implementation 'com.squareup.okhttp3:okhttp:3.14.9'
     implementation 'com.google.code.gson:gson:2.9.0'
 
     implementation "com.github.shibafu528.mastodon4j:mastodon4j:087b09001e99942c3423bfd6f4641c8a3a5560ce"
