--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -40,10 +40,10 @@ ext {
     mastodon4jVersion = '087b09001e99942c3423bfd6f4641c8a3a5560ce'
 
     y4aVersionMajor = 3
-    y4aVersionMinor = 1
-    y4aVersionPatch = 7
+    y4aVersionMinor = 2
+    y4aVersionPatch = 0
     y4aVersionSuffix = ''
-    y4aCodeName = 'mirage'
+    y4aCodeName = 'memento'
 
     git = new GitUtil(directory: rootProject.projectDir)
     y4aRevision = git.revHash.substring(0, 7)
