--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -155,7 +155,7 @@ dependencies {
     // Support Library
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'androidx.cardview:cardview:1.0.0'
-    implementation 'androidx.preference:preference:1.0.0'
+    implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.palette:palette:1.0.0'
     implementation 'com.google.android.material:material:1.0.0'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
@@ -206,7 +206,7 @@ dependencies {
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava' // TODO: com.google.guava:guava:27.0-android 以上に更新したら削除する
     implementation 'org.eclipse.collections:eclipse-collections-api:7.1.0'
     implementation 'org.eclipse.collections:eclipse-collections:7.1.0'
-    implementation 'com.takisoft.preferencex:preferencex:1.0.0'
+    implementation 'com.takisoft.preferencex:preferencex:1.1.0' // androidx.preferenceとバージョンを合わせる必要あり
     implementation fileTree(dir: './libs', includes: ['*.jar'])
 
     // Kotlin
