--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -157,11 +157,12 @@ dependencies {
     implementation 'androidx.cardview:cardview:1.0.0'
     implementation 'androidx.preference:preference:1.1.0'
     implementation 'androidx.palette:palette:1.0.0'
-    implementation 'com.google.android.material:material:1.0.0'
+    implementation 'com.google.android.material:material:1.9.0'
     implementation 'androidx.exifinterface:exifinterface:1.3.3'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.activity:activity-ktx:1.4.0'
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
+    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.browser:browser:1.5.0'
 
     def lifecycle_version = '2.5.1'
