--- a/api/mastodon-ws/build.gradle
+++ b/api/mastodon-ws/build.gradle
@@ -4,8 +4,9 @@ plugins {
 }
 
 java {
-    sourceCompatibility = JavaVersion.VERSION_1_8
-    targetCompatibility = JavaVersion.VERSION_1_8
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
 }
 
 repositories {
