--- a/yukari-processor-annotation/build.gradle
+++ b/yukari-processor-annotation/build.gradle
@@ -1,8 +1,5 @@
 apply plugin: 'java-library'
 
-sourceCompatibility = JavaVersion.VERSION_1_6
-targetCompatibility = JavaVersion.VERSION_1_6
-
 repositories {
     mavenCentral()
 }
@@ -17,4 +14,10 @@ compileJava {
 }
 compileTestJava {
     options.encoding = defaultEncoding
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
 }
