--- a/yukari-processor/build.gradle
+++ b/yukari-processor/build.gradle
@@ -1,9 +1,6 @@
 apply plugin: 'java'
 apply plugin: 'kotlin'
 
-sourceCompatibility = JavaVersion.VERSION_1_8
-targetCompatibility = JavaVersion.VERSION_1_8
-
 repositories {
     mavenCentral()
 }
@@ -15,7 +12,7 @@ dependencies {
 }
 
 buildscript {
-    ext.kotlin_version = '1.6.21'
+    ext.kotlin_version = '1.9.25'
     repositories {
         mavenCentral()
     }
@@ -30,4 +27,10 @@ compileJava {
 }
 compileTestJava {
     options.encoding = defaultEncoding
+}
+
+java {
+    toolchain {
+        languageVersion = JavaLanguageVersion.of(8)
+    }
 }
