--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -119,7 +119,6 @@ android {
     buildTypes {
         debug {
             debuggable true
-            minifyEnabled true
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.txt'
         }
         release {
@@ -167,6 +166,7 @@ dependencies {
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
     implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
     implementation 'androidx.browser:browser:1.5.0'
+    implementation 'androidx.collection:collection:1.5.0'
 
     def lifecycle_version = '2.5.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
@@ -208,8 +208,6 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:3.14.9'
     implementation 'com.google.guava:guava:22.0-android'
     implementation 'com.google.guava:listenablefuture:9999.0-empty-to-avoid-conflict-with-guava' // TODO: com.google.guava:guava:27.0-android 以上に更新したら削除する
-    implementation 'org.eclipse.collections:eclipse-collections-api:7.1.0'
-    implementation 'org.eclipse.collections:eclipse-collections:7.1.0'
     implementation 'com.takisoft.preferencex:preferencex:1.1.0' // androidx.preferenceとバージョンを合わせる必要あり
     implementation fileTree(dir: './libs', includes: ['*.jar'])
 
