--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -169,6 +169,7 @@ dependencies {
     implementation 'androidx.browser:browser:1.5.0'
     implementation 'androidx.collection:collection:1.5.0'
     implementation 'androidx.lifecycle:lifecycle-process:2.6.2'
+    implementation 'androidx.work:work-runtime-ktx:2.8.1'
 
     def lifecycle_version = '2.5.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
