--- a/Yukari/build.gradle
+++ b/Yukari/build.gradle
@@ -164,11 +164,11 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
     implementation 'androidx.activity:activity-ktx:1.7.2'
     implementation 'androidx.fragment:fragment-ktx:1.4.1'
-    implementation "androidx.swiperefreshlayout:swiperefreshlayout:1.1.0"
-    implementation 'androidx.browser:browser:1.5.0'
+    implementation 'androidx.swiperefreshlayout:swiperefreshlayout:1.2.0'
+    implementation 'androidx.browser:browser:1.9.0'
     implementation 'androidx.collection:collection:1.5.0'
-    implementation 'androidx.lifecycle:lifecycle-process:2.6.2'
-    implementation 'androidx.work:work-runtime-ktx:2.8.1'
+    implementation 'androidx.lifecycle:lifecycle-process:2.10.0'
+    implementation 'androidx.work:work-runtime-ktx:2.10.5'
 
     def lifecycle_version = '2.5.1'
     implementation "androidx.lifecycle:lifecycle-viewmodel-ktx:$lifecycle_version"
